# LibWebli

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/: auth_gard.cpp  auth_guard.cpp  json_get_echo.cpp  load_env.cpp  load_from_storage.cpp  overwrite_exceptions.cpp  router_groups.cpp  send_requests.cpp  websocket_chat.cpp
include/webli/: con.hpp  dotenv.hpp  exceptions.hpp  http.hpp  router.hpp  server.hpp  storage.hpp  webclient.hpp  websocket.hpp
include/webli/smart_ptr/: ssl.hpp
scripts/: certgen.sh  compile-linked.sh  compile-packed.sh  compile-release.sh  init.sh
src/: con.cpp  dotenv.cpp  http.cpp  router.cpp  server.cpp  storage.cpp  webclient.cpp  websocket.cpp
